// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a state when pressed: States Result 1`] = `
{
  "boardId": "",
  "color": "black",
  "id": Any<String>,
  "name": "My new state",
  "owner": "test",
  "position": 0,
}
`;

exports[`should focus on the input component and submit when 'Enter' is pressed: States Result 1`] = `
{
  "boardId": "",
  "color": "black",
  "id": Any<String>,
  "name": "My new state 2",
  "owner": "test",
  "position": 0,
}
`;
